# queryset-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README.rst  appveyor.yml  build.py  conanfile.py  conanfile.txt
.travis/: install.sh  run.sh
queryset/: CMakeLists.txt  base_manager.h  datasource.h  exceptions.h  filters.h  group_by.h  queryset.h  read_file.h  strong_typedef.h
queryset/_impl/: base_queryset.h  queryset.h  utils.h
queryset/backends/: CMakeLists.txt  filesystem.h  mysql.h  read_file.h  sqlite3.h  sqlite3_filter.h
queryset/models/: CMakeLists.txt  manager.h  model.h  queryset_typed.h
queryset/utils/: CMakeLists.txt  join.h  queryset.h  to_string.h  tuple.h
src/: datasource.h  read_file.h
test_package/: CMakeLists.txt  conanfile.py  main.cpp
tests/: CMakeLists.txt  config_tests.h.cmake  print_helper.hpp
tests/backends/: CMakeLists.txt  fixture_datasource.hpp  main.cpp  test_datasource_file.cpp  test_filter.cpp  test_groupby.cpp  test_mysql.cpp  test_sqlite3.cpp  test_sqlite3_datasource.cpp  test_sqlite3_groupby.cpp  test_sqlite3_manager.cpp  test_sqlite3_save.cpp
tests/data/: ex_filequeryset.tsv  fixture_datasource.tsv
tests/models/: CMakeLists.txt  main.cpp  test_model.cpp  test_model_custom.cpp  test_model_custom_manager.cpp
tests/queryset/: CMakeLists.txt  main.cpp  print_helper.hpp  test_class_queryset_eval.cpp  test_class_queryset_filter.cpp  test_class_queryset_get.cpp  test_class_queryset_groupby.cpp  test_class_queryset_operators.cpp  test_datasource_file.cpp  test_datasource_memory.cpp
tests/utils/: CMakeLists.txt  main.cpp  print_helper.hpp  test_queryset.cpp  test_queryset_filter.cpp  test_queryset_list.cpp  test_queryset_marginalize.cpp  test_queryset_project.cpp  test_to_string.cpp  test_tuple.cpp
